Fix unnecessary horizontal scroll

--- a/src/app/header/Header.module.css
+++ b/src/app/header/Header.module.css
@@ -5,7 +5,6 @@ header {
   position: -webkit-sticky; /* Safari */
   width: 100%;
   background-color: white;
-  padding-left: 25px;
   height: 50px;
   border-bottom: 1px solid #e7e7e7;
   display: flex;
@@ -14,6 +13,7 @@ header {
 }
 
 header .logo {
+  margin-left: 25px;
   height: 18px;
   pointer-events: none;
   margin-right: 35px;
